# db--migration-project

./: .env.example  .gitignore  CLI_USAGE.md  GETTING_STARTED.md  MIGRATION_COMPARISON.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  docker-compose.yml  main.py  pyproject.toml
config/: __init__.py  settings.py
docker/init-scripts/legacy/: 01-schema.sql  02-dependents.sql
docker/init-scripts/new/: 01-schema.sql  02-dependent.sql
models/: __init__.py
models/legacy/: __init__.py  base.py  beneficiary.py  dependent.py
models/new/: __init__.py  base.py  beneficiary.py  dependent.py
services/: __init__.py  beneficiary_migration.py  beneficiary_seeder.py  database.py  dependent_migration.py  dependent_seeder.py  seeder.py
utils/: __init__.py  helpers.py  logger.py
